// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelRoute component should display install modal if app found and in the registry and installed 1`] = `
<Wrapped
  appSlug="collect"
  channel="beta"
  dismissAction={[Function]}
  onCurrentChannel={[Function]}
  onNotHandled={[Function]}
  onSuccess={[Function]}
/>
`;

exports[`ChannelRoute component should display install modal if app found and in the registry even if not installed 1`] = `
<Wrapped
  appSlug="photos"
  channel="beta"
  dismissAction={[Function]}
  onCurrentChannel={[Function]}
  onNotHandled={[Function]}
  onSuccess={[Function]}
/>
`;
